--- a/app/src/main/res/layout/activity_ticket_history.xml
+++ b/app/src/main/res/layout/activity_ticket_history.xml
@@ -25,16 +25,30 @@
             android:orientation="vertical"
 
             >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Ticket History"
-                android:textSize="24sp"
-                android:textColor="@color/white"
-                android:layout_gravity="center"
-                android:layout_marginTop="12dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
 
-                />
+                <ImageView
+                    android:id="@+id/ivBackToMyTicket"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/arrow_left"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ticket History"
+                    android:textSize="24sp"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/cardEmpty"
@@ -43,6 +57,7 @@
                 android:backgroundTint="#222222"
                 app:cardCornerRadius="10dp"
                 android:layout_marginTop="16dp"
+                android:visibility="gone"
                 >
             <TextView
                     android:layout_width="wrap_content"
@@ -58,7 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/rvMyTicket"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="30dp"
                 android:background="@color/card_bg"
                 />
 
