--- a/app/src/main/res/layout/activity_my_ticket.xml
+++ b/app/src/main/res/layout/activity_my_ticket.xml
@@ -25,7 +25,7 @@
                 android:textSize="24sp"
                 android:textColor="@color/white"
                 android:layout_gravity="center"
-                android:layout_marginTop="12dp"
+
                 />
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
@@ -73,7 +73,7 @@
                 android:backgroundTint="#222222"
                 app:cardCornerRadius="10dp"
                 android:layout_marginTop="16dp"
-
+                android:visibility="gone"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
