--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -4,9 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="10dp"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
+    android:padding="24dp"
+
     android:background="@drawable/dialog_bg"
     android:gravity="center">
 
@@ -97,13 +96,14 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.button.MaterialButton
-        app:cornerRadius="12dp"
+        app:cornerRadius="24dp"
         android:id="@+id/btnChangePass"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/yello_theme"
         android:text="Change password"
         android:textSize="16dp"
-        android:textColor="@color/white"/>
+
+        android:textColor="@color/black"/>
 </LinearLayout>
