--- a/app/src/main/res/layout/activity_my_ticket.xml
+++ b/app/src/main/res/layout/activity_my_ticket.xml
@@ -73,7 +73,7 @@
                 android:backgroundTint="#222222"
                 app:cardCornerRadius="10dp"
                 android:layout_marginTop="16dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -105,6 +105,7 @@
                         android:layout_gravity="center"
                         />
                     <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btnBookNow"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="4dp"
